--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -29,9 +29,6 @@ button {
   cursor: pointer;
 }
 
-.span-2 {
-  grid-column: 1 / 3;
-}
 /* End of Basic Reset */
 
 /* Start of header section */
@@ -78,6 +75,10 @@ button {
   padding: 0.9rem 0.1rem;
   border: 2px solid transparent;
   transition: all var(--transition-time) ease-in-out;
+}
+
+.header-nav-link:last-child {
+  margin: 1.5rem 0;
 }
 
 .header-nav-link:not(:last-child):hover {
