--- a/styles/vote.css
+++ b/styles/vote.css
@@ -238,6 +238,7 @@
     width: 85%;
     max-width: 40rem;
     margin: auto;
+    grid-column: 1 / 3;
   }
 
   .header-img {
